# karaoke_system

./: .gitignore  README.md  README_WINDOWS.md  STRUCTURE.txt  app.py  pyproject.toml  requirements-windows-optional.txt  requirements-windows.txt  requirements.txt
karaoke_system/: config.py  exceptions.py  models.py
karaoke_system/alignment/: base.py  heuristic_aligner.py  merger.py  mfa_aligner.py  whisperx_aligner.py
karaoke_system/audio/: aec.py  devices.py  ffmpeg_tools.py  keyshift.py  separator.py
karaoke_system/engine/: manifest_builder.py  session.py  timeline.py
karaoke_system/lyrics/: normalize.py  reading.py  tokenize.py
karaoke_system/lyrics/parsers/: lrc.py  srt_parser.py
karaoke_system/lyrics/providers/: base.py  local_provider.py  online_provider.py
karaoke_system/pipeline/: preprocess_song.py
karaoke_system/pitch/: live_pitch.py  note_mapper.py  reference_pitch.py
karaoke_system/scoring/: judge.py  metrics.py  smoothing.py
karaoke_system/ui/: main_window.py  pitch_bar.py  score_panel.py  subtitle_overlay.py
karaoke_system/utils/: files.py  jsonx.py  text.py  time.py
scripts/: build_playback_cache.py  doctor.py
scripts/windows/: doctor_windows.bat  doctor_windows.ps1  install_windows.bat  install_windows.ps1  preprocess_song.bat  preprocess_song.ps1  start_player.bat  start_player.ps1
